tests/errors/known_bugs/calls.py
# <class 'pyccel.ast.builtins.PythonRange'> cannot be saved to variables
# pylint: disable=missing-function-docstring, missing-module-docstring
r1 = range(3)
r2 = range(2,5)
